src/objects/Public__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Article_Sections__c</fullName>
        <inlineHelpText>Specify article sections in format anchor:title;anchor:title;anchor:title</inlineHelpText>
        <label>Article Sections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <label>Article</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment_2__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_3__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment_4__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Public</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Support__c</fullName>
        <description>control the sort order of case support on the side of this article</description>
        <label>Case Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chat_Support__c</fullName>
        <description>Control sort order of chat support on the side of this article</description>
        <label>Chat Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Visible__c</fullName>
        <label>Feedback Visible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forum_Support__c</fullName>
        <description>The order that forum support should show up in the contact list on the side of this article</description>
        <label>Forum Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IKM_ID__c</fullName>
        <label>IKM ID</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Info__c</fullName>
        <label>Internal Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nav_Title__c</fullName>
        <label>Nav Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Article__c</fullName>
        <label>Next Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Support__c</fullName>
        <inlineHelpText>Choose the position for this contact method. 1 being first in the list 4 being last, 0 is not visible.</inlineHelpText>
        <label>Phone Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Article__c</fullName>
        <label>Previous Article</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pro_Services_CTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pro Services CTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Public_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://support.bigcommerce.com/&apos; + UrlName, &apos;https://support.bigcommerce.com/&apos; + UrlName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Terms__c</fullName>
        <inlineHelpText>Add additional keywords or terms not found in text here.</inlineHelpText>
        <label>Search Terms</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solves_For__c</fullName>
        <description>If product guide article what would the title be in the form of a question.</description>
        <inlineHelpText>If a product guide article or an article with a general title what would the title be in the form of a question.</inlineHelpText>
        <label>Solves For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Work Major</fullName>
                </value>
                <value>
                    <fullName>Needs Work Minor</fullName>
                </value>
                <value>
                    <fullName>Move Content</fullName>
                </value>
                <value>
                    <fullName>Complete Rework</fullName>
                </value>
                <value>
                    <fullName>Delete Article</fullName>
                </value>
                <value>
                    <fullName>HTML Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>Third Party</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>BAP-5098
Algolia Search Discovery - Knowledge &amp; Community</description>
        <formula>&apos;Documentation&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Public</label>
    <pluralLabel>Public</pluralLabel>
</CustomObject>